[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/tower_solarrailx64.png" type="Texture" id=1]
[ext_resource path="res://Buildings/Building.tscn" type="PackedScene" id=2]
[ext_resource path="res://Buildings/SolarRail.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 96 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 250.0

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
frame = 3
playing = true

[node name="Building" parent="." instance=ExtResource( 2 )]
Health = 10.0
Pollution = 3
Cost = 5

[node name="Attack Area" type="Area2D" parent="."]

[node name="AttackCollisionShape2D" type="CollisionShape2D" parent="Attack Area"]
shape = SubResource( 14 )
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
